[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Autoload/pause_menu.gd" type="Script" id=1]

[node name="PauseMenu" type="CanvasLayer"]
pause_mode = 2
layer = 10
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 640, 360 )
mouse_filter = 2
color = Color( 0, 0, 0, 0.584314 )

[node name="Buttons" type="VBoxContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -98.5
margin_top = -88.5
margin_right = 98.5
margin_bottom = 88.5
alignment = 1

[node name="ResumeButton" type="Button" parent="Buttons"]
margin_top = 54.0
margin_right = 197.0
margin_bottom = 74.0
text = "Resume"

[node name="RestartButton" type="Button" parent="Buttons"]
margin_top = 78.0
margin_right = 197.0
margin_bottom = 98.0
text = "Restart"

[node name="QuitButton" type="Button" parent="Buttons"]
margin_top = 102.0
margin_right = 197.0
margin_bottom = 122.0
text = "Quit"

[connection signal="pressed" from="Buttons/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="Buttons/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="Buttons/QuitButton" to="." method="_on_QuitButton_pressed"]
